--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="script.js" defer></script>
-  <link rel="stylesheet" href="styling.css">
-    <title>Snakey-Snakey!</title>
+  <script src="./script.js" defer type="module"></script>
+  <link rel="stylesheet" href="./styling.css">
+    <title>Snakey-Snakey</title>
 </head>
 <body>
+  <div class="container">
+  <div class="gud"> <h1>Snakey Snakey!</h1></div>
+ 
     <div id="board"></div>
+
+  </div>
 </body>
 </html>
