Added a score tracking system
It needed a score tracking system, and I raised the grid a little higher

--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 <body>
   <div class="container">
   <div class="gud"> <h1>Snakey Snakey!</h1></div>
+  <div class="score">
+    <label for="score" id="score_label">Score: </label>
+    <div id="score"></div>
+  </div>
+
  
     <div id="board"></div>
 
