updated the score system
can now keep track of the highest score on local machine

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <body>
   <div class="container">
   <div class="gud"> <h1>Snakey Snakey!</h1></div>
-  <div class="score">
-    <label for="score" id="score_label">Score: </label>
-    <div id="score"></div>
+  <div id="score_board">
+    <div id="current_score"></div>
+    <div id="high_score"></div>
   </div>
 
  
